-
Bug
-
Resolution: Done
-
P4: Low
-
Qt Creator 4.4.1
-
Windows
Qt Creator converts all environment variable names to uppercase for the environment it passes to its children. This causes problems with 3rd party tools. For example, when building Boost from within CMake using a custom script. The b2 tool bundled with Boost expects the names of environment variables to be canonical. And because Qt Creator capitalizes the environment variables, the Boost build now fails.
The conversion is implemented in src/libs/utils/environment.cpp, line 207: in Environment::Environment() function. Removing the conversion seems to fix the problem.
- resulted in
-
QTCREATORBUG-18958 REG 4.4->4.5 beta/Windows: git no longer works
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-18915 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
205630,8 | Environment: Keep case of environment variables on windows | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |